--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1545,7 +1545,7 @@ input, select, textarea {
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: url("images/overlay.png");
+			/* background: url("images/overlay.png"); */
 		}
 
 		.image img {
@@ -2249,15 +2249,15 @@ input, select, textarea {
 			}
 
 			.main > .content.style1 {
-				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #45482a, #695a46, #705b20);
+				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(180deg, #45482a, #695a46);
 			}
 
 			.main > .content.style2 {
-				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg, #45482a, #695a46, #705b20);
+				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, linear-gradient(45deg, #45482a, #695a46, #705b20);
 			}
 
 			.main > .content.style3 {
-				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(45deg,#45482a, #695a46, #705b20);
+				background: url("images/bgtr.svg") top right no-repeat, linear-gradient(180deg,#695a46, #705b20);
 			}
 
 			.main > .content.style4 {
