--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2261,6 +2261,7 @@ input, select, textarea {
 			}
 
 			.main > .content.style5 {
+				padding-top: 0;
 				background: url("images/bgtr.svg") top right no-repeat, linear-gradient(180deg,#705b20, #534318);
 			}
 
