--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2182,7 +2182,7 @@ input, select, textarea {
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url("images/overlay.png"), url("../../images/header.jpg");
+		background-image: linear-gradient(90deg, rgba(20,20,20,0.6), rgba(20,20,20,0.6)), url("../../images/header.png"); 
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
@@ -2249,7 +2249,7 @@ input, select, textarea {
 			}
 
 			.main > .content.style1 {
-				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/overlay.png"), linear-gradient(180deg, #45482a, #695a46);
+				background: url("images/bgtr.svg") top right no-repeat, url("images/bgbl.svg") bottom left no-repeat, url("images/bgbl.svg") bottom left no-repeat, linear-gradient(180deg, #45482a, #695a46); /* url('images/overlay.png'), */
 			}
 
 			.main > .content.style2 {
