--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2511,3 +2511,76 @@ input, select, textarea {
 				}
 
 	}
+
+	.timeline {
+		margin: 0 auto;
+		max-width: 1500px;
+		padding: 25px;
+		display: grid;
+		grid-template-columns: 1fr 3px 2fr;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 100;
+		line-height: 1.75em;
+		color: #ffffff;
+	  }
+	  
+	  .timeline__component {
+		margin: 0 20px 20px 20px;
+	  }
+	  
+	  .timeline__component--bg {
+		padding: 1.5em;
+		background: rgba(255, 255, 255, 0.2);
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+		border-radius: 10px;
+	  }
+	  
+	  /* LEAVE TILL LAST */
+	  .timeline__component--bottom {
+		margin-bottom: 0;
+	  }
+	  
+	  .timeline__middle {
+		position: relative;
+		background: #ffffff;
+	  }
+	  
+	  .timeline__point {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 15px;
+		height: 15px;
+		background: #ffffff;
+		border-radius: 50%;
+	  }
+	  
+	  .timeline__point--bottom {
+		top: initial;
+		bottom: 0;
+	  }
+	  
+	  .timeline__date--right {
+		text-align: right;
+	  }
+
+	  .timeline__position--right {
+		text-align: right;
+		font-size: 1.5em;
+		padding-bottom: 0.5em;
+	  }
+	  
+	  .timeline__title {
+		margin-bottom: 0.5em;
+		font-size: 1.15em;
+		font-weight: bold;
+	  }
+	  
+	  .timeline__paragraph {
+		font-weight: 300;
+		font-size: 1em;
+		line-height: 1.75em;
+		color: #cbd0cf;
+	  }
+	  
