Updated links and removed social medias

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2544,7 +2544,7 @@ input, select, textarea {
 		position: relative;
 		background: #ffffff;
 	  }
-	  
+	  s
 	  .timeline__point {
 		position: absolute;
 		top: 0;
