--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2182,23 +2182,36 @@ input, select, textarea {
 	#header {
 		position: relative;
 		margin: 0;
+		height: 100vh;
 		background-image: linear-gradient(90deg, rgba(20,20,20,0.6), rgba(20,20,20,0.6)), url("../../images/header.png"); 
-		background-size: auto, cover;
-		background-position: top left, center center;
-		background-repeat: repeat, no-repeat;
-		padding: 14em 0 14em 0;
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+		padding: 0;
+		display: flex;
+		flex-direction: column; 
+		align-items: center; 
+		justify-content: center;
 		text-align: center;
 		color: #fff;
 	}
 
+		#header .text-container {
+			position: relative;
+			padding: 2em 7em;
+			background-color: rgba(0, 0, 0, 0.397); /* Black transparent background */
+			display: inline-block; /* Makes the background size match the text */
+			border-radius: 1em; /* Optional, for rounded corners */
+		}
+
 		#header header h1 {
 			font-size: 2.25em;
 			line-height: 1.25em;
-			margin-bottom: 0;
+			margin: 0.4em 0em;
 		}
 
 		#header header p {
-			margin-top: 1.25em;
+			margin: 0.8em 0em;
 			font-weight: 100;
 			padding: 0;
 			font-size: 1.25em;
@@ -2207,7 +2220,7 @@ input, select, textarea {
 		}
 
 		#header footer {
-			padding-top: 1.5em;
+			padding: 1em 0em;
 		}
 
 /* Main Sections */
@@ -2229,15 +2242,15 @@ input, select, textarea {
 				font-size: 2.25em;
 				font-weight: 100;
 				margin-bottom: 0;
-				padding-left: 1em;
-				padding-right: 1em;
+				padding-left: 0em;
+				padding-right: 0em;
 			}
 
 			.main > header p {
 				margin: 1.2em 0 0 0;
 				text-align: left;
-				padding-left: 2.3em;
-				padding-right: 2.3em;
+				padding-left: 0em;
+				padding-right: 0em;
 			}
 
 			.main > p b {
@@ -2636,3 +2649,32 @@ input, select, textarea {
 		-moz-transform: scale(1.1);
 	  }
 	  
+	  .appear.inview {
+		opacity: 1;
+		transform: none;
+	  }
+	  
+	  .appear.inview:nth-child(1) {
+		-webkit-transition-delay: 0.1s;
+		transition-delay: 0.1s;
+	  }
+	  
+	  .appear.inview:nth-child(2) {
+		-webkit-transition-delay: 0.2s;
+		transition-delay: 0.2s;
+	  }
+	  
+	  .appear.inview:nth-child(3) {
+		-webkit-transition-delay: 0.3s;
+		 transition-delay: 0.3s;
+	  }
+	  
+	  .appear.inview:nth-child(4) {
+		-webkit-transition-delay: 0.4s;
+		transition-delay: 0.4s;
+	  }
+	  
+	  .appear.inview:nth-child(5) {
+		-webkit-transition-delay: 0.5s;
+		transition-delay: 0.5s;
+	  }
